<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>land.jay.floristics</groupId>
    <artifactId>Floristics</artifactId>
    <version>2.6-SNAPSHOT</version>
    <packaging>jar</packaging>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.9.0</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>testCompile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>com.cryptomorin.xseries</pattern>
                            <!-- Be sure to change the package below -->
                            <shadedPattern>land.jay.floristics</shadedPattern>
                        </relocation>
                    </relocations>
                    <!-- Here you can remove the classes you don't use. -->
                    <!-- These are some examples. -->
                    <!-- The "unused" package and SkullCacheListener are excluded by default. -->
                    <!-- Some utilities such a XItemStack depend on more than 3 other classes, so watch out. -->
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>com/cryptomorin/xseries/NMSExtras*</exclude>
                                <exclude>com/cryptomorin/xseries/NoteBlockMusic*</exclude>
                                <exclude>com/cryptomorin/xseries/SkullCacheListener*</exclude>
                                <exclude>com/cryptomorin/xseries/SkullUtils*</exclude>
                                <exclude>com/cryptomorin/xseries/XBlock*</exclude>
                                <exclude>com/cryptomorin/xseries/XEnchantment*</exclude>
                                <exclude>com/cryptomorin/xseries/XEntity*</exclude>
                                <exclude>com/cryptomorin/xseries/XItemStack*</exclude>
                                <exclude>com/cryptomorin/xseries/XMaterial*</exclude>
                                <exclude>com/cryptomorin/xseries/XPotion*</exclude>
                                <exclude>com/cryptomorin/xseries/XSound*</exclude>
                                <exclude>com/cryptomorin/xseries/XTag*</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>


    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.18.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>   
        <dependency>
            <groupId>com.github.TownyAdvanced</groupId>
            <artifactId>Towny</artifactId>
            <version>0.98.2.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>XSeries</artifactId>
            <version>9.1.0</version>
        </dependency>
    </dependencies>
    
</project>